--- a/Atividade_Recuperação.ipynb
+++ b/Atividade_Recuperação.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP39iUDbOo3g0Nx9g9jFJnD",
+      "authorship_tag": "ABX9TyMHr0x+nHmgAtbUWoWkNc+8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -684,6 +684,29 @@
           },
           "metadata": {},
           "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install psycopg2-binary\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cudx_YB3BsI3",
+        "outputId": "e11a8801-568d-49c7-ae3f-abc4193dc680"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: psycopg2-binary in /usr/local/lib/python3.10/dist-packages (2.9.10)\n"
+          ]
         }
       ]
     }
